<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/nav_login">

    <fragment
        android:id="@+id/nav_login"
        android:name="dev.arpan.imc.demo.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/to_nav_signup"
            app:destination="@id/nav_signup" />
        <action
            android:id="@+id/to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/main_nav"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_signup"
        android:name="dev.arpan.imc.demo.ui.signup.SignUpFragment"
        android:label="@string/title_sign_up"
        tools:layout="@layout/fragment_signup">
        <action
            android:id="@+id/action_nav_signup_to_nav_login"
            app:destination="@id/nav_login"
            app:popUpTo="@id/nav_login"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_home"
        android:name="dev.arpan.imc.demo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/to_nav_profile"
            app:destination="@id/nav_profile" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="dev.arpan.imc.demo.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>